# ROS2-Assignment

./: IMPLEMENTATION_SUMMARY.md  README.md  ROBOT_CONTROL_GUIDE.md  inspect_bag.py  plot_task2_data.py  plot_task2_v2.py  run_line_follower.sh  run_straight_line.sh  run_tasks.sh  run_tasks_fixed.sh  setup.sh
src/robot_common/: package.xml  setup.py
src/robot_common/msg/: IMUData.msg
src/robot_common/robot_common/: __init__.py  constants.py  graph_visualizer.py  ipc.py  messages.py  msg.py  utilities.py
src/robot_common/robot_common.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/robot_hardware_interface/: package.xml  setup.py
src/robot_hardware_interface/launch/: hardware.launch.py
src/robot_hardware_interface/robot_hardware_interface/: __init__.py  imu_sensor.py  motor_controller.py
src/robot_hardware_interface/robot_hardware_interface.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/task1_motor_control/: package.xml  setup.py
src/task1_motor_control/launch/: motor_control.launch.py
src/task1_motor_control/task1_motor_control/: __init__.py
src/task1_motor_control/task1_motor_control.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/task1_motor_control/task1_motor_control/nodes/: __init__.py  basic_motor_node.py  motor_controller_node.py  motor_node.py
src/task2_imu_straight_line/: package.xml  setup.py
src/task2_imu_straight_line/launch/: imu_control.launch.py
src/task2_imu_straight_line/task2_imu_straight_line/: __init__.py
src/task2_imu_straight_line/task2_imu_straight_line.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/task2_imu_straight_line/task2_imu_straight_line/nodes/: __init__.py  imu_controller_node.py
src/task3_line_follower/: package.xml  setup.py
src/task3_line_follower/launch/: line_follower.launch.py
src/task3_line_follower/task3_line_follower/: __init__.py
src/task3_line_follower/task3_line_follower/nodes/: line_follower_motor_node.py  line_sensor_node.py  line_sensor_publisher_node.py
src/task4_vision_line_follower/: package.xml  setup.py
src/task4_vision_line_follower/launch/: vision_control.launch.py
src/task4_vision_line_follower/task4_vision_line_follower/: __init__.py
src/task4_vision_line_follower/task4_vision_line_follower/nodes/: vision_node.py
