<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>task1_motor_control</name>
  <version>0.0.1</version>
  <description>Motor control with IMU feedback - ROS2 node using topic-based communication</description>
  <maintainer email="pi@raspberry.local">Raspberry Pi Robot</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_common</exec_depend>
  <exec_depend>robot_hardware_interface</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
