<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>task2_imu_straight_line</name>
  <version>0.0.1</version>
  <description>IMU-based straight line driving with gyroscope feedback</description>
  <maintainer email="pi@raspberry.local">Raspberry Pi Robot</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_common</exec_depend>
  <exec_depend>robot_hardware_interface</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
